compiler/tests/should-fail/ConfidentialityChangingEndorsement.via
/* ConfidentialityChangingEndorsementError */

fun main() {
    val result: int = endorse 42 to {alice<-} from {alice};
}

host alice
